// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`display-names-prod > bundler: vite > build > should create build output 1`] = `
{
  "index.html": SCRIPTS: [
    "/vite-client-CEKer_RN.js",
  ]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[0]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <div>
        <h1>
          Display Names Test
        </h1>
        <button>
          Click me
        </button>
        <div>
          This is a card
        </div>
        <input>
        <footer>
          Footer content
        </footer>
        <div id="display-names-test">
          <p>
            Components should have displayName in production build:
          </p>
          <ul>
            <li>
              Button.displayName:
              Button
            </li>
            <li>
              Card.displayName:
              Card
            </li>
            <li>
              Header.displayName:
              Header
            </li>
            <li>
              MemoFooter.displayName:
              MemoFooter
            </li>
            <li>
              Input.displayName:
              Input
            </li>
            <li>
              PublicBox.displayName:
              Box
            </li>
          </ul>
        </div>
      </div>
    </div>
    <script
      type="module"
      src="SCRIPTS[0]"
    >
    </script>
  </body>
</html>,
  "vite-client-CEKer_RN.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vite-client-CEKer_RN.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`display-names-prod > bundler: webpack > build > should create build output 1`] = `
{
  "7-4274d242a3d5e5313473.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "7-4274d242a3d5e5313473.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "index.html": SCRIPTS: [
    "/runtime-980fb1ffe39d4de310ac.js",
    "/7-4274d242a3d5e5313473.js",
    "/main-c715accbc81524045460.js",
  ]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
  </head>
  <body>
    <div id="app">
      <div>
        <h1>
          Display Names Test
        </h1>
        <button>
          Click me
        </button>
        <div>
          This is a card
        </div>
        <input>
        <footer>
          Footer content
        </footer>
        <div id="display-names-test">
          <p>
            Components should have displayName in production build:
          </p>
          <ul>
            <li>
              Button.displayName:
              Button
            </li>
            <li>
              Card.displayName:
              Card
            </li>
            <li>
              Header.displayName:
              Header
            </li>
            <li>
              MemoFooter.displayName:
              MemoFooter
            </li>
            <li>
              Input.displayName:
              Input
            </li>
            <li>
              PublicBox.displayName:
              Box
            </li>
          </ul>
        </div>
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[0]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
  </body>
</html>,
  "main-c715accbc81524045460.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-c715accbc81524045460.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-980fb1ffe39d4de310ac.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-980fb1ffe39d4de310ac.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;
